# discord-rs-streamer

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
crates/cli/: Cargo.toml
crates/cli/src/: ingest.rs  main.rs  play.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs
crates/dave/: Cargo.toml
crates/dave/src/: lib.rs
crates/discord_gateway/: Cargo.toml
crates/discord_gateway/src/: lib.rs
crates/discord_transport/: Cargo.toml
crates/discord_transport/src/: lib.rs
crates/discord_voice/: Cargo.toml
crates/discord_voice/src/: client.rs  lib.rs  publisher.rs  session.rs
crates/media_ingest/: Cargo.toml
crates/media_ingest/src/: lib.rs
crates/test_harness/: Cargo.toml
crates/test_harness/src/: lib.rs
docker/: entrypoint.sh
docs/: architecture.md  clean-room.md  operator-guide.md
docs/releases/: 1.0.0.md
