[workspace]
members = [
  "crates/cli",
  "crates/daemon",
  "crates/dave",
  "crates/discord_gateway",
  "crates/discord_transport",
  "crates/discord_voice",
  "crates/media_ingest",
  "crates/test_harness",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/PanicIsReal/discord-rs-streamer"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.6", features = ["macros"] }
base64 = "0.22.1"
bytes = { version = "1.11.0", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
futures-util = "0.3.31"
http = "1.3.1"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unwrap_used = "deny"

[patch.crates-io]
datachannel = { path = "vendor/datachannel" }
