[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
daemon = { path = "../daemon" }
discord_gateway = { path = "../discord_gateway" }
media_ingest = { path = "../media_ingest" }
ogg = "0.9.2"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
