[package]
name = "daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
webrtc-media = ["discord_voice/webrtc"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
dave = { path = "../dave" }
discord_gateway = { path = "../discord_gateway" }
discord_transport = { path = "../discord_transport" }
discord_voice = { path = "../discord_voice" }
futures.workspace = true
http.workspace = true
media_ingest = { path = "../media_ingest" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
futures-util.workspace = true
tempfile.workspace = true
test_harness = { path = "../test_harness" }
tokio-tungstenite.workspace = true
tower.workspace = true
