[package]
name = "dave"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
serde_json.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
davey = { path = "../../vendor/davey" }
