[package]
name = "test_harness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dave = { path = "../dave" }
discord_gateway = { path = "../discord_gateway" }
discord_transport = { path = "../discord_transport" }
tokio.workspace = true
